--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name portfolio.auca.ac.rw;
+    server_name 192.168.1.20;
 
-    root /var/www/portfolio;
+    root /var/www/portfolio-linux;
     index index.html index.php;
 
     location / {
@@ -11,11 +11,10 @@ server {
 
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php8.1-fpm.sock; 
     }
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-        expires max;
-        log_not_found off;
+    location ~ /\.ht {
+        deny all;
     }
 }
